2009-01-23	The InnoDB Team

	* include/buf0buf.h, buf/buf0buf.c:
	Remove the unused mode BUF_GET_NOWAIT of buf_page_get_gen()

2009-01-20	The InnoDB Team

	* include/rem0rec.h, include/rem0rec.ic:
	Fix Bug#41571 MySQL segfaults after innodb recovery

2009-01-20	The InnoDB Team

	* lock/lock0lock.c:
	Fix Bug#42152 Race condition in lock_is_table_exclusive()

2009-01-14	The InnoDB Team

	* include/trx0roll.h, trx/trx0roll.c, trx/trx0trx.c:
	Fix Bug#38187 Error 153 when creating savepoints

2009-01-14	The InnoDB Team

	* dict/dict0load.c:
	Fix Bug#42075 dict_load_indexes failure in dict_load_table will
	corrupt the dictionary cache

2009-01-13	The InnoDB Team

	* include/hash0hash.h, include/dict0dict.ic, dict/dict0dict.c,
	include/buf0buf.ic, buf/buf0buddy.c, trx/trx0i_s.c,
	handler/ha_innodb.cc, handler/win_delay_loader.cc,
	dict/dict0mem.c, ha/ha0storage.c, thr/thr0loc.c, fil/fil0fil.c:
	Add the parameter ASSERTION to HASH_SEARCH() macro, and use it for
	light validation of the traversed items in hash table lookups when
	UNIV_DEBUG is enabled.

2009-01-09	The InnoDB Team

	* include/buf0flu.h, include/buf0flu.ic, buf/buf0flu.c:
	Remove unused code from the functions
	buf_flush_insert_into_flush_list() and
	buf_flush_insert_sorted_into_flush_list().

2009-01-09	The InnoDB Team

	* buf/buf0flu.c: Simplify the functions buf_flush_try_page() and
	buf_flush_batch().  Add debug assertions and an explanation to
	buf_flush_write_block_low().

2009-01-07	The InnoDB Team

	* row/row0merge.c:
	Fix a bug in recovery when dropping temporary indexes

2009-01-07	The InnoDB Team

	* handler/ha_innodb.cc, handler/ha_innodb.h, handler/handler0alter.cc:
	Fix Bug#41680 calls to trx_allocate_for_mysql are not consistent

2009-01-07	The InnoDB Team

	* mysql-test/innodb_bug41904.result, mysql-test/innodb_bug41904.test,
	row/row0merge.c:
	Fix Bug#41904 create unique index problem

2009-01-02	The InnoDB Team

	* handler/ha_innodb.cc, include/srv0srv.h, srv/srv0srv.c,